WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278796
Cannot use element fullscreen for video fullscreen when Fullscreen API is disabled
https://bugs.webkit.org/show_bug.cgi?id=278796
Summary
Cannot use element fullscreen for video fullscreen when Fullscreen API is dis...
Andy Estes
Reported
2024-08-28 10:15:04 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-28 10:15:26 PDT
<
rdar://problem/134863159
>
Andy Estes
Comment 2
2024-08-28 12:14:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32844
EWS
Comment 3
2024-08-31 22:21:51 PDT
Committed
283033@main
(a76e340b35bc): <
https://commits.webkit.org/283033@main
> Reviewed commits have been landed. Closing PR #32844 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug